--- a/style.css
+++ b/style.css
@@ -5,10 +5,34 @@ body {
     justify-content: center;
     align-items: center;
     padding: 16px;
+    font-family: Arial, Helvetica, sans-serif; 
 }
 
 .card {
     background: #F8F8F8;
     border-radius: 16px;
     padding: 32px;
+}
+
+.card__description {
+    line-height: 1.375;
+    margin: 0;
+}
+
+.card__link {
+    color: #E20613;
+    text-decoration: none;
+}
+
+.card__name {
+    font-size: 36px;
+    font-weight: 400;
+    margin: 0;
+}
+
+.card__position {
+    font-size: 18px;
+    font-style: italic;
+    margin: 0;
+    color: #545454;
 }
